--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <li><a href="#">Contact</a></li>
         </ul>
         </div>
-<div class="image-container">
-   
+
+<div class="image-container"></div>
 </header>
 
 
 
 <body>
-  
+    
     <div class="container">
         <section class="top-content">
            
