--- a/about.html
+++ b/about.html
@@ -29,47 +29,57 @@
 
 
 <body>
-<div class="middle-content2">
 
-    <div class="container about-page">
+<div class="container">
     
     <H2>About</H2>
 
     <P>Leverage agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition. Organically grow the holistic world view of disruptive innovation via workplace diversity and empowerment.
     </P>
-<br>
+    <br>
+    <section class="middle-content"></section>
+     
 
-    <div>
+<div class="flex-container">
+
+
+  <div>
     <img src="img/about-plan.png" alt="strategy">
     <h2>Strategy</h2>
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
     <button>Learn More</button>
-    </div>
+    <section class="middle-content"></section>
+   
+  </div>
 
-
-   <div>
-    <img src="img/about-working.png" alt="strategy">
+    <div>
+   <img src="img/about-working.png" alt="strategy">
     <h2>How We Work</h2>
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
     <button>Learn More</button>
-   </div>
+    <section class="middle-content"></section>
+    </div>
 
-   <div>
-    <img src="img/about-office.png" alt="strategy">
+  <div>
+   <img src="img/about-office.png" alt="strategy">
     <h2>Places We Work</h2>
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
     <button>Learn More</button>
-       </div>
-
+    <section class="middle-content"></section>
+     </div>     
   <div>
+  
     <img src="img/about-meeting.png" alt="strategy">
     <h2>Collaboration</h2>
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
     <button>Learn More</button>
-    </div>
+    <section class="middle-content"></section>
+  </div>
+ 
+</div>
 <br>
 
   <section>
