--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
+<!-- Free-form questions
+
+1.If you were to describe semantic HTML to the next cohort of students, what would you say?
+
+  Semantic HTML is a way to set up your page assigning information to be more specific. This gives emphasis and meaning to your content. It could be compared to the way a book is structured to have more meaning. 
+
+2.Name two big differences between display: block; and display: inline;.
+
+  Display block would function as a block always starting in a new line and extending as far as it is set in the width. Inline only take up as much space as necessary and it sets your elements to be side by side.
+
+3.What are the 4 areas of the box model?
+
+  The 4 areas are of the box model are: 1-content; 2-padding; 3-border; 4-margin.
+
+4.While using flexbox, what axis does the following property work on: align-items: center?
+
+  Align-items works along the cross axis.
+
+5.Explain why git is valuable to a team of developers
+
+  Git is valuable to a team of developers because through it, all types of files can be stored and the content may be tracked to observe the changes. Also a version can be stored on the server as well as a local version to work from own PC. This allows everyone to be up to date with the project.-->
+  
+
+
 <!doctype html>
 
 <html lang="en">
