--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
     <h2>Strategy</h2>
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
-    <button>Learn More</button>
+    <a href="#">Learn More</a>
     <section class="middle-content"></section>
    
   </div>
@@ -58,7 +58,7 @@
     <h2>How We Work</h2>
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
-    <button>Learn More</button>
+    <a href="#">Learn More</a>
     <section class="middle-content"></section>
     </div>
 
@@ -66,7 +66,7 @@
    <img src="img/about-office.png" alt="strategy">
     <h2>Places We Work</h2>
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
-    <button>Learn More</button>
+    <a href="#">Learn More</a>
     <section class="middle-content"></section>
      </div>     
   <div>
@@ -75,7 +75,7 @@
     <h2>Collaboration</h2>
     <p>Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.
     </p>
-    <button>Learn More</button>
+    <a href="#">Learn More</a>
     <section class="middle-content"></section>
   </div>
  
